Tables Customers and Addresses working in first version

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To Lab 1: EF Code First</h1>
+    <div>
+        <a asp-controller="Customers" asp-action="Index">Customers List</a> |
+        <a asp-controller="Addresses" asp-action="Index">Addresses List</a>
+    </div>
 </div>
