Add Customer - Address relationship table

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,9 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome To Lab 1: EF Code First</h1>
+    <h1 class="display-4">Welcome To Lab 2: Getting Data</h1>
     <div>
         <a asp-controller="Customers" asp-action="Index">Customers List</a> |
-        <a asp-controller="Addresses" asp-action="Index">Addresses List</a>
+        <a asp-controller="Addresses" asp-action="Index">Addresses List</a> |
+        <a asp-controller="CustomerAddresses" asp-action="Index">Relation Customer - Addresses</a>
     </div>
 </div>
