Last minor changes

--- a/Views/CustomerAddresses/Index.cshtml
+++ b/Views/CustomerAddresses/Index.cshtml
@@ -17,7 +17,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Customer)
+                @Html.DisplayNameFor(model => model.Customer.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Customer.LastName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Address)
@@ -32,10 +35,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Customer.CustomerId)
+                @Html.DisplayFor(modelItem => item.Customer.FirstName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Address.AddressId)
+                @Html.DisplayFor(modelItem => item.Customer.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address.AddressLine1)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsOwner)
