--- a/Views/CustomerAddresses/Compare.cshtml
+++ b/Views/CustomerAddresses/Compare.cshtml
@@ -6,8 +6,8 @@
 <form asp-action="Compare" method="post">
     <div class="container">
         <div class="row">
-            @*<div class="col-md-6">
-                <select asp-for="CustomerId" asp-items="Model.CustomerId"></select>
+@*            <div class="col-md-6">
+                <select asp-for="CustomerId" asp-items="Model.customer"></select>
             </div>
             <div class="col-md-6">
                 <select asp-for="AddressId" asp-items="Model.Address"></select>
