--- a/Views/CustomerAddresses/Details.cshtml
+++ b/Views/CustomerAddresses/Details.cshtml
@@ -15,13 +15,13 @@
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerId)
+            @Html.DisplayFor(model => model.Customer.FirstName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address.AddressId)
+            @Html.DisplayFor(model => model.Address.AddressLine1)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsOwner)
