--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4"><strong>Hotel</strong>: Lab 3 - Data Annotations</h1>
 </div>
+<br />
+<div class="text-center">
+    <a asp-controller="Clients" asp-action="Index">Clients</a> |
+    <a asp-controller="Rooms" asp-action="Index">Rooms</a> 
+</div>
+<br />
