--- a/Views/Rooms/Create.cshtml
+++ b/Views/Rooms/Create.cshtml
@@ -20,8 +20,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Section" class="control-label"></label>
-                <select asp-for="Section" class="form-control"></select>
-                <span asp-validation-for="Section" class="text-danger"></span>
+                <select asp-for="Section" class="form-control">
+                    <option value="First">First</option>
+                    <option value="Second">Second</option>
+                    <option value="Third">Third</option>
+                </select>
+            <span asp-validation-for="Section" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
