--- a/Views/Rooms/Edit.cshtml
+++ b/Views/Rooms/Edit.cshtml
@@ -21,7 +21,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Section" class="control-label"></label>
-                <select asp-for="Section" class="form-control"></select>
+                <select asp-for="Section" class="form-control">
+                    <option value="First">First</option>
+                    <option value="Second">Second</option>
+                    <option value="Third">Third</option>
+                </select>
                 <span asp-validation-for="Section" class="text-danger"></span>
             </div>
             <div class="form-group">
