--- a/Views/Rooms/Index.cshtml
+++ b/Views/Rooms/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.RoomNumber)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Capacity)
             </th>
             <th>
@@ -25,6 +28,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.RoomNumber)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Capacity)
             </td>
